--- a/wildlife_tracking_system/templates/index.html
+++ b/wildlife_tracking_system/templates/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wildlife Conservation System</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <div class="container">
         <header>
-            <img src="assets/images/logo.png" alt="Wildlife Conservation Logo" class="logo">
+            <img src="{{ url_for('static', filename='images/logo.jpeg') }}" alt="Wildlife Conservation Logo" class="logo">
             <h1>Wildlife Conservation System</h1>
         </header>
 
@@ -32,6 +32,12 @@
         </main>
     </div>
 
-    <script src="assets/js/app.js"></script>
+    <script>
+        function selectCamera(cameraName) {
+            window.location.href = `/video_feed/${encodeURIComponent(cameraName)}`;
+        }
+    </script>
+
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
 </html>
